--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,8 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  body {
+    @apply bg-neutral-900 text-foreground text-base;
+  }
 }
